<resources>
    <string name="app_name">豆妹日报</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="share_title" translatable="false">shared_title</string>
    <string name="shared_img" translatable="false">shared_img</string>

    <string name="action_settings">Settings</string>
    <string name="ic_news">阅读</string>
    <string name="ic_meizi">妹子图</string>
    <string name="ic_video">视频</string>


    <string name="tab_zhihu">知乎日报</string>
    <string name="tab_dev">Android周报</string>
    <string name="tab_zhihu_themes">主题日报</string>


    <string name="tab_dbmeinv">豆瓣美女</string>
    <string name="tab_dbmeinv_daxiong">大胸妹</string>
    <string name="tab_dbmeinv_qiaotun">小翘臀</string>
    <string name="tab_dbmeinv_meitui">美腿控</string>
    <string name="tab_dbmeinv_heisi">黑丝袜</string>
    <string name="tab_dbmeinv_zahui">大杂烩</string>

    <string name="tab_mzitu">妹子图</string>
    <string name="tab_mzitu_hot">热门</string>
    <string name="tab_mzitu_best">推荐</string>
    <string name="tab_mzitu_xinggan">性感妹子</string>
    <string name="tab_mzitu_japan">日本妹子</string>
    <string name="tab_mzitu_taiwan">台湾妹子</string>
    <string name="tab_mzitu_mm">清纯妹子</string>

    <string name="tab_dy">斗鱼</string>
    <string name="tab_xm">熊猫TV</string>

    <string name="share_to">分享</string>
    <string name="collect">收藏</string>
    <string name="get_ad">让 Ta 打赏</string>

    <string name="search">Search</string>
    <string name="play">Play</string>
    <string name="photo_page">%1$d/%2$d</string>
    <string name="ic_save">save</string>


</resources>
