<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_news_black"
            android:title="@string/ic_news" />
        <item
            android:id="@+id/nav_meizi"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/ic_meizi" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/ic_video"/>
        <!--<item-->
            <!--android:id="@+id/nav_manage"-->
            <!--android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="TODO Tools" />-->
    </group>

    <item android:title="Orher">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share_to" />
            <item
                android:id="@+id/nav_collect"
                android:icon="@drawable/iconfont_weishoucang"
                android:title="@string/collect" />
            <item
                android:id="@+id/nav_get_ad"
                android:icon="@drawable/ic_jinbi"
                android:title="@string/get_ad" />
        </menu>
    </item>

</menu>
