<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="0"
        android:title="@string/action_settings"
        app:showAsAction="never" />


    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_menu_white_share"
        android:orderInCategory="1"
        android:title="@string/share_to"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/menu_collect"
        android:icon="@drawable/iconfont_weishoucang"
        android:orderInCategory="2"
        android:title="@string/collect"
        app:showAsAction="ifRoom|collapseActionView" />
</menu>